feat: backend_completo