@@ -5,24 +5,19 @@ import com.agroapp.platform.plants.domain.model.queries.*;
 import com.agroapp.platform.plants.domain.services.*;
 import com.agroapp.platform.plants.interfaces.rest.resources.*;
 import com.agroapp.platform.plants.interfaces.rest.transform.*;
-import com.agroapp.platform.plants.domain.model.queries.GetAllTasksQuery;
-import com.agroapp.platform.plants.domain.model.queries.GetTaskByIdQuery;
-import com.agroapp.platform.plants.domain.model.queries.GetTasksByFieldIdQuery;
-import com.agroapp.platform.plants.domain.services.TaskCommandService;
-import com.agroapp.platform.plants.domain.services.TaskQueryService;
-import com.agroapp.platform.plants.interfaces.rest.resources.CreateTaskResource;
-import com.agroapp.platform.plants.interfaces.rest.resources.EditTaskResource;
-import com.agroapp.platform.plants.interfaces.rest.resources.TaskResource;
-import com.agroapp.platform.plants.interfaces.rest.transform.CreateTaskCommandFromResourceAssembler;
-import com.agroapp.platform.plants.interfaces.rest.transform.TaskResourceFromEntityAssembler;
-import com.agroapp.platform.plants.interfaces.rest.transform.UpdateTaskCommandFromResourceAssembler;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
+/**
+ * REST Controller for Task aggregate.
+ * Handles HTTP requests related to Task management.
+ * Follows hexagonal architecture: delegates to services and uses assemblers for transformations.
+ */
 @RestController
 @RequestMapping("/api/Tasks")
 @Tag(name = "Tasks", description = "Task Management Endpoints")
@@ -37,49 +32,83 @@ public class TasksController {
         this.taskQueryService = taskQueryService;
     }
 
+    /**
+     * Gets all tasks.
+     * GET /api/Tasks
+     */
     @GetMapping
     public ResponseEntity<List<TaskResource>> getAllTasks() {
         var query = new GetAllTasksQuery();
         var tasks = taskQueryService.handle(query);
+
         var taskResources = tasks.stream()
                 .map(TaskResourceFromEntityAssembler::toResourceFromEntity)
-                .toList();
+                .collect(Collectors.toList());
+
         return ResponseEntity.ok(taskResources);
     }
 
+    /**
+     * Creates a new task.
+     * POST /api/Tasks
+     */
     @PostMapping
     public ResponseEntity<TaskResource> createTask(@RequestBody CreateTaskResource resource) {
+        // Transform Resource to Command using Assembler
         var command = CreateTaskCommandFromResourceAssembler.toCommandFromResource(resource);
+
+        // Execute command through service
         var task = taskCommandService.handle(command);
         if (task.isEmpty()) {
             return ResponseEntity.badRequest().build();
         }
+
+        // Transform Entity to Resource using Assembler
         var taskResource = TaskResourceFromEntityAssembler.toResourceFromEntity(task.get());
         return new ResponseEntity<>(taskResource, HttpStatus.CREATED);
     }
 
+    /**
+     * Gets a task by its ID.
+     * GET /api/Tasks/{id}
+     */
     @GetMapping("/{id}")
     public ResponseEntity<TaskResource> getTaskById(@PathVariable Long id) {
         var query = new GetTaskByIdQuery(id);
         var task = taskQueryService.handle(query);
+
         if (task.isEmpty()) {
             return ResponseEntity.notFound().build();
         }
+
         var taskResource = TaskResourceFromEntityAssembler.toResourceFromEntity(task.get());
         return ResponseEntity.ok(taskResource);
     }
 
+    /**
+     * Updates an existing task.
+     * PUT /api/Tasks/{id}
+     */
     @PutMapping("/{id}")
     public ResponseEntity<TaskResource> updateTask(@PathVariable Long id, @RequestBody EditTaskResource resource) {
+        // Transform Resource to Command using Assembler
         var command = UpdateTaskCommandFromResourceAssembler.toCommandFromResource(id, resource);
+
+        // Execute command through service
         var task = taskCommandService.handle(command);
         if (task.isEmpty()) {
             return ResponseEntity.badRequest().build();
         }
+
+        // Transform Entity to Resource using Assembler
         var taskResource = TaskResourceFromEntityAssembler.toResourceFromEntity(task.get());
         return ResponseEntity.ok(taskResource);
     }
 
+    /**
+     * Deletes a task by its ID.
+     * DELETE /api/Tasks/{id}
+     */
     @DeleteMapping("/{id}")
     public ResponseEntity<Void> deleteTask(@PathVariable Long id) {
         var command = new DeleteTaskCommand(id);
@@ -87,13 +116,19 @@ public class TasksController {
         return ResponseEntity.noContent().build();
     }
 
+    /**
+     * Gets all tasks associated with a specific field.
+     * GET /api/Tasks/field/{fieldId}
+     */
     @GetMapping("/field/{fieldId}")
     public ResponseEntity<List<TaskResource>> getTasksByFieldId(@PathVariable Long fieldId) {
         var query = new GetTasksByFieldIdQuery(fieldId);
         var tasks = taskQueryService.handle(query);
+
         var taskResources = tasks.stream()
                 .map(TaskResourceFromEntityAssembler::toResourceFromEntity)
-                .toList();
+                .collect(Collectors.toList());
+
         return ResponseEntity.ok(taskResources);
     }
 }
